Moving to laptop

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -612,9 +612,9 @@
 	author = {Danowski, Caroline and Gravemeier, Volker and Yoshihara, Lena and Wall, Wolfgang A.},
 	year = {2013},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/nme.4530},
-	keywords = {AMG, BGS, coupled problem, monolithic approach, thermo-structure interaction, thermomechanics},
+	keywords = {AMG, BGS, coupled problem, monolithic approach, thermo-structure interaction, thermomechanics, classified, to read},
 	pages = {1053--1078},
-	file = {Snapshot:/home/jose/Zotero/storage/IVSFUVY2/nme.html:text/html;danowski_et_al_2013_a_monolithic_computational_approach_to_thermo-structure_interaction.pdf:/home/jose/Zotero/storage/ZBQ27EG6/erbts2014.pdf:application/pdf},
+	file = {Snapshot:/home/jose/Zotero/storage/IVSFUVY2/nme.html:text/html;danowski_et_al_2013_a_monolithic_computational_approach_to_thermo-structure_interaction.pdf:/home/jose/Zotero/storage/ZBQ27EG6/danowski_et_al_2013_a_monolithic_computational_approach_to_thermo-structure_interaction.pdf:application/pdf},
 }
 
 @article{dettmer_computational_2006,
@@ -755,7 +755,7 @@
 }
 
 @techreport{hartmann_comparison_2012,
-	title = {Comparison of the multiplicative decompositions \${\textbackslash}bm\{{F}\} = {\textbackslash}bm\{{F}\}\_\{{\textbackslash}{Theta}\}{\textbackslash}bm\{{F}\}\_\{{M}\}\$ and \${\textbackslash}bm\{{F}\} = {\textbackslash}bm\{{F}\}\_\{{M}\}{\textbackslash}bm\{{F}\}\_\{{\textbackslash}{Theta}\}\$ in finite strain thermo- elasticity},
+	title = {Comparison of the multiplicative decompositions \{\${\textbackslash}bm\{{F}\}={\textbackslash}bm\{{F}\}\_\{{\textbackslash}{Theta}\}{\textbackslash}bm\{{F}\}\_\{{M}\}\$\} and \{\${\textbackslash}bm\{{F}\}={\textbackslash}bm\{{F}\}\_\{{M}\}{\textbackslash}bm\{{F}\}\_\{{\textbackslash}{Theta}\}\$\} in finite strain thermo- elasticity},
 	abstract = {In this work out the multiplicative decomposition of the deformation gradient into a thermal and a mechanical part is investigated on the basis of a model of thermo-elasticity. The proposed multiplicative decomposition is studied to be in both order, i.e. in the form F = FΘFM and F = FMFΘ. It is shown that for the case of isotropy and the assumption of a pure volumetric temperature evolution both formulations yield the same stress state. However, in the intermediate conﬁgurations different results occur. Furthermore, some basic investigations of uniaxial tensile/compression tests with constant temperature or problems for classical strain-energies are treated.},
 	language = {en},
 	institution = {Institute of Applied Mechanics, Clausthal University of Technology},
@@ -948,7 +948,7 @@
 	year = {1999},
 	keywords = {classified, to read},
 	pages = {1--34},
-	file = {ScienceDirect Snapshot:/home/jose/Zotero/storage/JPYGGHAP/S0749641998000552.html:text/html;agelet_de_saracibar_et_al_1999_on_the_formulation_of_coupled_thermoplastic_problems_with_phase-change.pdf:/home/jose/Zotero/storage/DZD58VUB/agelet_de_saracibar_et_al_1999_on_the_formulation_of_coupled_thermoplastic_problems_with_phase-change.pdf:application/pdf},
+	file = {ScienceDirect Snapshot:/home/jose/Zotero/storage/JPYGGHAP/S0749641998000552.html:text/html;agelet_de_saracibar_et_al_1999_on_the_formulation_of_coupled_thermoplastic_problems_with_phase-change.pdf:/home/jose/Zotero/storage/DZD58VUB/ageletdesaracibar1999.pdf:application/pdf},
 }
 
 @article{srikanth_computational_1999,
@@ -1095,6 +1095,7 @@
 	author = {Irons, Bruce M. and Tuck, Robert C.},
 	year = {1969},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/nme.1620010306},
+	keywords = {classified, to read},
 	pages = {275--277},
 	file = {irons_tuck_1969_a_version_of_the_aitken_accelerator_for_computer_iteration.pdf:/home/jose/Zotero/storage/9GRSVSZA/irons1969.pdf:application/pdf;Snapshot:/home/jose/Zotero/storage/H74TWA6Y/nme.html:text/html;Irons and Tuck - 1969 - A version of the Aitken accelerator for computer i.pdf:/home/jose/Zotero/storage/PHPDEZJX/Irons and Tuck - 1969 - A version of the Aitken accelerator for computer i.pdf:application/pdf},
 }
@@ -1250,7 +1251,7 @@
 	note = {Publisher: MCB UP Ltd},
 	keywords = {Algorithms, Block‐iterative techniques, Coupling, Interaction, Nonlinearity, classified, to read},
 	pages = {4--30},
-	file = {cervera_et_al_1996_on_the_computational_efficiency_and_implementation_of_block‐iterative.pdf:/home/jose/Zotero/storage/JZLM8JDT/cervera1996.pdf:application/pdf},
+	file = {cervera_et_al_1996_on_the_computational_efficiency_and_implementation_of_block‐iterative.pdf:/home/jose/Zotero/storage/JZLM8JDT/cervera_et_al_1996_on_the_computational_efficiency_and_implementation_of_block‐iterative.pdf:application/pdf},
 }
 
 @article{vaz_damage_2011,
@@ -1419,7 +1420,7 @@
 	language = {en},
 	urldate = {2021-01-13},
 	journal = {Computer Methods in Applied Mechanics and Engineering},
-	author = {Dittmann, M. and Franke, M. and Temizer, I. and Hesch, C.},
+	author = {Dittmann, M. and Franke, M. and Temizer, İ. and Hesch, C.},
 	month = jun,
 	year = {2014},
 	keywords = {Mortar method, Frictional contact, Isogeometric Analysis, Thermomechanics},
@@ -1429,7 +1430,7 @@
 
 @phdthesis{gitterle_dual_2012,
 	type = {Ph.{D}.},
-	title = {A dual mortar formulation for finite deformation frictional contact problems including wear and thermal coupling},
+	title = {A dual mortar formulation for ﬁnite deformation frictional contact problems including wear and thermal coupling},
 	abstract = {Contact mechanics and friction are fundamental disciplines in engineering and applied science. They describe the potential surface interactions of solids. Closely related to especially frictional contact are effects from wear and thermomechanics. Alone and in combination, they are causal for different kinds of phenomena. Fretting fatigue, a possible damage mechanism in turbine or fan disc to blade joints in aircraft engines, is one of many relevant examples.},
 	language = {de},
 	school = {Technische Universität München},
@@ -2123,7 +2124,7 @@
 	year = {2008},
 	keywords = {Fluid–structure interaction, Artery, Black box, Elastic tube, Fourier error analysis, Reduced-order model, classified, read},
 	pages = {2224--2234},
-	file = {Degroote et al_2008_Stability of a coupling technique for partitioned solvers in FSI applications.pdf:/home/jose/Zotero/storage/IKHGRI92/degroote2008(1).pdf:application/pdf},
+	file = {Degroote et al_2008_Stability of a coupling technique for partitioned solvers in FSI applications.pdf:/home/jose/Zotero/storage/IKHGRI92/degroote2008(1).pdf:application/pdf;1-s2.0-S0045794908001466-main.pdf:/home/jose/Zotero/storage/HKNG5YHE/1-s2.0-S0045794908001466-main.pdf:application/pdf},
 }
 
 @article{farhat_application_2003,
@@ -2992,7 +2993,7 @@ publisher: Elsevier},
 	year = {2021},
 	keywords = {Thermo-mechanical coupling, Finite strains, Gradient damage-plasticity, Metallic materials, Micromorphic approach},
 	pages = {103142},
-	file = {felder_et_al_2021_thermo-mechanically_coupled_gradient-extended_damage-plasticity_modeling_of.pdf:/home/jose/Zotero/storage/J9ENUYXB/felder_et_al_2021_thermo-mechanically_coupled_gradient-extended_damage-plasticity_modeling_of.pdf:application/pdf},
+	file = {felder_et_al_2021_thermo-mechanically_coupled_gradient-extended_damage-plasticity_modeling_of.pdf:/home/jose/Zotero/storage/J9ENUYXB/1-s2.0-S0749641921002102-main(4).pdf:application/pdf},
 }
 
 @article{strang_approximating_1969,
@@ -3190,4 +3191,76 @@ publisher: Elsevier},
 	publisher = {Springer Berlin Heidelberg},
 	author = {Holt, M. and Yanenko, N.N.},
 	year = {2012},
+}
+
+@phdthesis{gatzhammer_efficient_2014,
+	address = {München},
+	type = {Dissertation},
+	title = {Efficient and {Flexible} {Partitioned} {Simulation} of {Fluid}-{Structure} {Interactions}},
+	school = {Technische Universität München},
+	author = {Gatzhammer, Bernhard},
+	year = {2014},
+	keywords = {fluid-structure interaction, classified, to read, numerical simulation, partitioned approach},
+	file = {Gatzhammer_2014_Efficient and Flexible Partitioned Simulation of Fluid-Structure Interactions.pdf:/home/jose/Zotero/storage/NTE5GU8N/Gatzhammer_2014_Efficient and Flexible Partitioned Simulation of Fluid-Structure Interactions.pdf:application/pdf;Gatzhammer2014_preCICE.pdf:/home/jose/Zotero/storage/HPKWWZTE/Gatzhammer2014_preCICE.pdf:application/pdf},
+}
+
+@phdthesis{uekermann_partitioned_2016,
+	type = {{PhD} {Thesis}},
+	title = {Partitioned fluid-structure interaction on massively parallel systems},
+	school = {Technische Universität München},
+	author = {Uekermann, Benjamin Walter},
+	year = {2016},
+	keywords = {classified, to read},
+	file = {Uekermann - 2016 - Partitioned fluid-structure interaction on massive.pdf:/home/jose/Zotero/storage/4TEL76R3/Uekermann - 2016 - Partitioned fluid-structure interaction on massive.pdf:application/pdf},
+}
+
+@phdthesis{scheufele_coupling_2018,
+	address = {Stuttgart},
+	type = {{PhD} {Thesis}},
+	title = {Coupling schemes and inexact {Newton} for multi-physics and coupled optimization problems},
+	school = {Universität Stuttgart},
+	author = {Scheufele, Klaudius},
+	year = {2018},
+	keywords = {classified, to read},
+	file = {Scheufele_2018_Coupling schemes and inexact Newton for multi-physics and coupled optimization problems.pdf:/home/jose/Zotero/storage/HQCWQ24I/Scheufele_2018_Coupling schemes and inexact Newton for multi-physics and coupled optimization problems.pdf:application/pdf},
+}
+
+@article{haelterman_quasi-newton_2009,
+	title = {The {Quasi}-{Newton} {Least} {Squares} {Method}: {A} {New} and {Fast} {Secant} {Method} {Analyzed} for {Linear} {Systems}},
+	volume = {47},
+	url = {https://doi.org/10.1137/070710469},
+	doi = {10.1137/070710469},
+	abstract = {We present a new quasi-Newton method that can solve systems of equations of which no information is known explicitly and which requires no special structure of the system matrix, like positive definiteness or sparseness. The method builds an approximate Jacobian based on input-output combinations of a black box system, uses a rank-one update of this Jacobian after each iteration, and satisfies the secant equation. While it has originally been developed for nonlinear equations we analyze its properties and performance when applied to linear systems. Analytically, the method is shown to be convergent in \$n+1\$ iterations (n being the number of unknowns), irrespective of the nature of the system matrix. The performance of this method is greatly superior to other quasi-Newton methods and comparable with GMRes when tested on a number of standardized test-cases.},
+	number = {3},
+	journal = {SIAM Journal on Numerical Analysis},
+	author = {Haelterman, Rob and Degroote, Joris and Van Heule, Dirk and Vierendeels, Jan},
+	year = {2009},
+	note = {\_eprint: https://doi.org/10.1137/070710469},
+	keywords = {classified, to read},
+	pages = {2347--2368},
+	file = {Haelterman_Degroote_Van Heule_Vierendeels_2009_The Quasi-Newton Least Squares Method.pdf:/home/jose/Zotero/storage/M5FHGIIS/Haelterman_Degroote_Van Heule_Vierendeels_2009_The Quasi-Newton Least Squares Method.pdf:application/pdf},
+}
+
+@article{saad_gmres_1986,
+	title = {{GMRES}: {A} generalized minimal residual algorithm for solving nonsymmetric linear systems},
+	volume = {7},
+	number = {3},
+	journal = {SIAM Journal on scientific and statistical computing},
+	author = {Saad, Youcef and Schultz, Martin H},
+	year = {1986},
+	note = {Publisher: SIAM},
+	pages = {856--869},
+	file = {Saad_Schultz_1986_GMRES.pdf:/home/jose/Zotero/storage/AWTHEVZL/Saad_Schultz_1986_GMRES.pdf:application/pdf},
+}
+
+@article{benhamadou_fom_2014,
+	title = {On the {FOM} {Algorithm} for the {Resolution} of the {Linear} {Systems} {Ax}= b},
+	volume = {4},
+	number = {03},
+	journal = {Advances in Linear Algebra \& Matrix Theory},
+	author = {Benhamadou, Mongi},
+	year = {2014},
+	note = {Publisher: Scientific Research Publishing},
+	pages = {156},
+	file = {ALAMT_2014092315115206.pdf:/home/jose/Zotero/storage/2YV73TVF/ALAMT_2014092315115206.pdf:application/pdf},
 }
