--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,7 @@
 \usepackage{xargs}
 \usepackage[textwidth=30mm,textsize=footnotesize]{todonotes} % to create comments (useful to your advisor!)
 \newcommandx{\bpf}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}} % Bernardo notes
+\newcommandx{\jvc}[2][1=]{\todo[linecolor=orange,backgroundcolor=orange!25,bordercolor=orange,#1]{#2}} % My notes
 
 % Equation color background
 \usepackage{mdframed}
