--- a/thermo_mechanical_problem.tex
+++ b/thermo_mechanical_problem.tex
@@ -1,4 +1,5 @@
 \chapter{Thermo-mechanical problem}
+\label{chapter:thermo_mechanical_problem}
 
 In the following chapter, the general framework presented in chapter~\ref{} is applied to the complete thermo-mechanical analysis.
 Chapters~\ref{} and \ref{} concerning the standalone mechanical and thermal problems provide a guide for the developments that follow.
